pacman/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pacman
    app.kubernetes.io/component: pacman
    app.kubernetes.io/instance: prod-pacman
    app.kubernetes.io/name: pacman
    app.kubernetes.io/part-of: pacman
    app.openshift.io/runtime: nodejs
  name: pacman
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
  selector:
    app: pacman
