pacman/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pacman
    app.kubernetes.io/component: pacman
    app.kubernetes.io/instance: pacman
    app.kubernetes.io/name: pacman
    app.kubernetes.io/part-of: pacman
    app.openshift.io/runtime-version: 1.0.1
  name: pacman
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: pacman
    weight: 100
  wildcardPolicy: None
